2002-06-09  Damien Sandras  <dsandras@seconix.com>

	* configure.in: Fixed small bug. Version is now 0.93.0.

	* src/callbacks.cpp, src/cleaner.h, src/common.h, src/config.cpp,
	src/connection.h, src/endpoint.cpp, src/endpoint.h, src/gatekeeper.cpp,
	src/gatekeeper.h, src/gdkvideoio.cpp, src/gdkvideoio.h, 
	src/gnomemeeting.h, src/ils.h, src/ldap_window.cpp, 
	src/main_window.cpp, src/main_window.h, src/menu.cpp, src/misc.cpp,
	src/misc.h, src/pref_window.cpp, src/toolbar.cpp, src/urlhandler.h,
	src/videograbber.h: Changed GM_RTP_Data to GmRtpData, GM_pref_window
	to GmPrefWindow, GM_Main_Window to GmMainWindow, GM_Chat_Window to
	GmChatWindow. (Julien Puydt aka Snark).
	
2002-06-09  Damien Sandras  <dsandras@seconix.com>

	* src/main_window.h: Added function to update the new progressbar
	that moves when we are calling somebody.
	
	* src/common.h: Added ID of progressbar timeout.

	* src/endpoint.cpp: Remove the timeout on the progressbar when the
	call starts or is refused.

	* src/gnomemeeting.cpp: Adapted the code to make use of the new URL
	handler. Added timeout to update the progressbar when calling. 
	Clear the statusbar on disconnect and on connect.

	* src/gnomemeeting.h: Added pointer to the URL Handler to the class.

	* src/ils.cpp: Added function that searches after an e-mail on 
	an ILS server and returns the IP if the e-mail is registered to the
	ILS directory.

	* src/ils.h: Added function that searches after an e-mail on 
	an ILS server and returns the IP if the e-mail is registered to the
	ILS directory.

	* src/main_window.cpp: Added function to update the new progressbar
	that moves when we are calling somebody.

	* src/urlhandler.cpp: Added multithreaded class that will made
	the search on the ILS directory, and call the user if he is found.

	* src/urlhandler.h: Added multithreaded class that will made
	the search on the ILS directory, and call the user if he is found.

	* src/Makefile.am: Added urlhandler.cpp, urlhandler.h
	