@@ -1,3 +1,14 @@
+2002-06-10  Damien Sandras  <dsandras@seconix.com>
+
+	* src/endpoint.cpp: Hide the progressbar when not needed.
+
+	* src/gnomemeeting.cpp: Show the progressbar when needed.
+
+	* src/main_window.cpp: Made the progressbar invisible by default.
+	Code cleanups for popt. The progressbar is smaller.
+
+	* src/urlhandler.cpp: Display message when searching for user on ILS.
+	
 2002-06-09  Damien Sandras  <dsandras@seconix.com>
 
 	* configure.in: Fixed small bug. Version is now 0.93.0.
